<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_in_bg"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        >


        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hnt"
            android:inputType="phone"
            android:text="@string/txt_user"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            app:met_maxCharacters="11"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"
            />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/pass_word"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:inputType="textPassword"
            android:text="@string/txt_pass"
            android:hint="@string/hnt_pass"
            android:textColor="@android:color/black"
            android:textSize="34sp"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            app:met_maxCharacters="11"
            app:met_baseColor="@android:color/white"
            app:met_primaryColor="@android:color/white"

            />


    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:layout_marginStart="130dp"

        />
    <Button

        android:id="@+id/log_in_btn"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="300dp"
        android:background="@drawable/log_sign_up"
        android:text="@string/log"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>