<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="360dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@drawable/pop_up_background"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/pop_up"
        android:textSize="50sp"
        android:textAlignment="center"
        android:lineSpacingExtra="10dp"
        android:textColor="#000000"
        />

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="159dp"
        android:layout_gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical">

        <Button
            android:layout_width="180dp"
            android:id="@+id/pop_btn_1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_btn"
            android:padding="5dp"
            android:text="@string/pop_btn_name"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"

            />

        <Button
            android:layout_width="wrap_content"
            android:id="@+id/pop_btn_2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/bg_btn"
            android:padding="5dp"
            android:text="@string/pop_btn_name2"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"

            />

    </LinearLayout>

</LinearLayout>