<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".OnboardingScreenTwo">


    <ImageView
        android:id="@+id/img2"
        android:layout_width="214dp"
        android:layout_height="224dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/delivery"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/big_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="294dp"
        android:layout_marginEnd="88dp"
        android:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        android:gravity="center"
        android:lineSpacingExtra="12sp"
        android:text="@string/sec_onbord_txt"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/small_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="78dp"
        android:layout_marginTop="387dp"
        android:textStyle="bold"
        android:layout_marginEnd="78dp"
        android:fontFamily="@font/roboto_bold"
        android:lineSpacingExtra="3sp"
        android:text="@string/sec_onbord_txt_2"
        android:textAlignment="center"
        android:textColor="#989696"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/next_page2"
        android:layout_width="190dp"
        android:layout_height="59dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="467dp"
        android:layout_marginEnd="85dp"
        android:background="@drawable/bg_btn"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/btn_1"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/skip_one"
        android:layout_width="28dp"
        android:layout_height="16dp"
        android:layout_gravity="top|end"
        android:layout_marginStart="308dp"
        android:layout_marginTop="26dp"
        android:text="@string/txt_4"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="#B31217"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004" />

</androidx.constraintlayout.widget.ConstraintLayout>